[gd_scene load_steps=9 format=3 uid="uid://d1w7whsgxptuv"]

[ext_resource type="Script" path="res://Carte/Porte_bleu.gd" id="1_j0y4w"]
[ext_resource type="Texture2D" uid="uid://b3cad43imn7o1" path="res://Carte/Modern+ Study Time (32x32)/doors_school.png" id="2_shepd"]
[ext_resource type="Texture2D" uid="uid://idnl1hauh4uk" path="res://UI/Keyboard Letters and Symbols.png" id="3_ycf37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7yl3"]
size = Vector2(20, 4)

[sub_resource type="Animation" id="Animation_gkj5l"]
resource_name = "Fermeture"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("porte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [87, 75, 63, 51]
}

[sub_resource type="Animation" id="Animation_bfswt"]
resource_name = "Ouverture"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("porte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [51, 63, 75, 87]
}

[sub_resource type="Animation" id="Animation_7fuyv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("porte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [51]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjw05"]
_data = {
"Fermeture": SubResource("Animation_gkj5l"),
"Ouverture": SubResource("Animation_bfswt"),
"RESET": SubResource("Animation_7fuyv")
}

[node name="Porte_bleu" type="Area2D"]
scale = Vector2(1.1, 1.1)
script = ExtResource("1_j0y4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -51)
shape = SubResource("RectangleShape2D_x7yl3")

[node name="porte" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -33)
texture = ExtResource("2_shepd")
hframes = 12
vframes = 8
frame = 51

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjw05")
}

[node name="F" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -62.7273)
texture = ExtResource("3_ycf37")
hframes = 8
vframes = 14
frame = 21

[node name="Détecteur_joueur" type="Area2D" parent="."]

[node name="Joueur_détecteur" type="CollisionShape2D" parent="Détecteur_joueur"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_x7yl3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="Détecteur_joueur" to="." method="_on_détecteur_joueur_body_entered"]
[connection signal="body_exited" from="Détecteur_joueur" to="." method="_on_détecteur_joueur_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
